--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python-multipart = "^0.0.9"
 pytesseract = "^0.3.13"
 pillow = "^10.4.0"
 duckduckgo-search = "^6.2.11"
+ollama = "^0.3.3"
 
 
 [tool.poetry.group.dev.dependencies]
